# CNI-Exp

./: README.en.md  README.md
E1_3790/: CMakeLists.txt
E1_3790/doc/: Base64编码概述.md  E01-3790-魏清晨.docx  Visual-Net项目阅读.md  report.md  实验报告.html  实验报告.md
E1_3790/src/: QrCodeTest.cpp  QrEncoder.hpp  base64_decode.hpp  base64_encode.hpp  ffmpeg_cmd.hpp  main.cpp  utility.hpp  zlib_compress.hpp
E1_3790/src/debug/: QrCodeTest.cpp  check_img_identical.cpp  progress_bar.cpp
E2_3790/: CMakeLists.txt
E2_3790/doc/: E02-3790-魏清晨.docx
E2_3790/src/: QrEncoder.hpp  base64_decode.hpp  base64_encode.hpp  crc32.hpp  main.cpp  qrcode_convert.hpp
E3_3790/: CMakeLists.txt
E3_3790/doc/: E03-3790-魏清晨.docx
E3_3790/src/: ftp.cpp  ip.cpp
E5_3790/: E5_3790.csproj  E5_3790.sln
E5_3790/doc/: ~$5-3790-魏清晨.docx
E5_3790/src/: LicenseClient.cs  LicenseManager.cs  LicenseServer.cs  Program.cs
E6_3790/doc/: E06-3790-魏清晨.docx
E7_3790/: E7_3790.csproj  E7_3790.sln
E7_3790/doc/: E07-3790-魏清晨.docx
E7_3790/src/: Program.cs  TcpListener.cs
IPv6_3790/doc/: IPv6网络基础-第七章-3790-魏清晨.docx  数通模拟器的安装和使用-3790-魏清晨.docx
华7_IPv6_3790/doc/: IPv6交换和路由-第八九章-3790-魏清晨.docx  IPv6网络基础-第八九章-3790-魏清晨.docx  ~$v6网络基础-第八九章-3790-魏清晨.docx  ~WRL0005.tmp
